@@ -1,3 +1,8 @@
+2009-09-05 Harri Pitkänen <hatapitk@iki.fi>
+
+	* Clear grammar checker cache when options are
+	  changed.
+
 2009-09-04 Harri Pitkänen <hatapitk@iki.fi>
 
 	* Add Pyunit tests for the Python interface.
